tdf#132147: formula may be empty

"Regression" after commit ab285c743afa1c8769581871d7b56374fd8c49f1

  author	Noel Grandin <noel.grandin@collabora.co.uk>	Sat Nov 02 18:59:49 2019 +0200
  committer	Noel Grandin <noel.grandin@collabora.co.uk>	Sun Nov 03 17:11:14 2019 +0100

  loplugin:stringadd

  tweak the plugin to be more permissive, then validate by hand
  afterwards

which replaced strFor.replaceAt(0,1,"") with strFor.copy(1). Both methods
are illegal on empty string, but the former asserted, then silently corrected
wrong count; while the latter returns "br0ken". So the change actually
revealed a pre-existing bug.

Change-Id: Ic32b69d46e852f26e6c6ba819eed08bb79dce7a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92301
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit de1dadd591862e38242cc2de7a4a658a9a8b67ac)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92303
Reviewed-by: Eike Rathke <erack@redhat.com>